Fix part of T68666: Animated mesh UVs, vertex colors don’t update on time change